--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "ReplaceMacros for VS Code",
   "description": "Run chained string replacements as one macro action. Save, edit, reorder steps, and import/export via JSON.",
   "version": "0.1.1",
-  "publisher": "",
+  "publisher": "h-matsufuji9",
   "author": "h-matsufuji9",
   "repository": "https://github.com/h-matsufuji9/vscode-replace-macros",
   "homepage": "https://github.com/h-matsufuji9/vscode-replace-macros",
@@ -125,11 +125,10 @@
     "package": "vsce package"
   },
   "devDependencies": {
-    "@types/node": "^18.18.0",
+    "@types/node": "^20.11.30",
     "@types/vscode": "^1.82.0",
     "typescript": "^5.3.3",
     "@vscode/vsce": "^2.23.0",
-    "vitest": "^1.4.0"
-  },
-  "dependencies": {}
+    "vitest": "^4.0.13"
+  }
 }
