--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-replace-macros",
   "displayName": "ReplaceMacros for VS Code",
   "description": "Run chained string replacements as one macro action. Save, edit, reorder steps, and import/export via JSON.",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "publisher": "h-matsufuji9",
   "author": "h-matsufuji9",
   "repository": "https://github.com/h-matsufuji9/vscode-replace-macros",
@@ -30,6 +30,7 @@
     "onCommand:vsc-macros.importMacros",
     "onCommand:vsc-macros.exportMacros",
     "onCommand:vsc-macros.editMacro",
+    "onCommand:vsc-macros.openSettingsJson",
     "onView:vsc-macros.list"
   ],
   "main": "./out/extension.js",
@@ -85,6 +86,11 @@
         "command": "vsc-macros.editMacro",
         "title": "Macros: Edit Saved Macro",
         "icon": "$(edit)"
+      },
+      {
+        "command": "vsc-macros.openSettingsJson",
+        "title": "Macros: Open Settings JSON",
+        "icon": "$(settings-gear)"
       }
     ],
     "menus": {
@@ -92,20 +98,26 @@
         {
           "command": "vsc-macros.createMacro",
           "when": "view == vsc-macros.list",
-          "group": "navigation",
+          "group": "navigation@1",
           "icon": "$(add)"
         },
         {
-          "command": "vsc-macros.importMacros",
+          "command": "vsc-macros.openSettingsJson",
           "when": "view == vsc-macros.list",
-          "group": "navigation",
-          "icon": "$(cloud-download)"
+          "group": "navigation@2",
+          "icon": "$(settings-gear)"
         },
         {
           "command": "vsc-macros.exportMacros",
           "when": "view == vsc-macros.list",
-          "group": "navigation",
+          "group": "navigation@3",
           "icon": "$(cloud-upload)"
+        },
+        {
+          "command": "vsc-macros.importMacros",
+          "when": "view == vsc-macros.list",
+          "group": "navigation@4",
+          "icon": "$(cloud-download)"
         }
       ],
       "view/item/context": [
